--- a/package.json
+++ b/package.json
@@ -1,4 +1,5 @@
 {
+  "homepage": "https://jasirjaleel.github.io/vocal-scribe/",
   "name": "vocal-scribe",
   "private": true,
   "version": "0.0.0",
