--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "homepage": "https://jasirjaleel.github.io/vocal-scribe/",
+  "homepage": "https://vocal-scribe.jasir.online/",
   "name": "vocal-scribe",
   "private": true,
   "version": "0.0.0",
